<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alerts_fullscreen_title"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alerts_fullscreen_message"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alerts_fullscreen_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="alerts_fullscreen_button_close"
        android:text="@string/alerts_fullscreen_close" />

</LinearLayout>
